# wall

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml
configs/: development.cfg  sample_transactions.jsonl
design/: crypto_trading_engine_design.md  crypto_trading_engine_uml.md  development_tasks_and_priorities.md  implementation_plan_by_phase.md
docker/: docker-compose.yml
include/app/: application.hpp  backtest_runner.hpp  engine_controller.hpp  mock_event_sources.hpp  recovery_service.hpp  runtime_operational_controls.hpp  simulation_runtime.hpp  transaction_publisher_application.hpp
include/config/: app_config.hpp  config_loader.hpp
include/core/: clock.hpp  event_dispatcher.hpp  types.hpp
include/exchange/: exchange_execution_adapter.hpp  exchange_market_data_adapter.hpp  exchange_router.hpp  live_market_data_feed.hpp
include/execution/: live_execution_tracker.hpp  matching_engine.hpp  order_book.hpp  simulated_execution_engine.hpp
include/infrastructure/: kafka_transaction_consumer.hpp  kafka_transaction_producer.hpp  postgres_repositories.hpp  redis_cache.hpp
include/ingestion/: transaction_consumer.hpp  transaction_ingestor.hpp
include/market_data/: feed_health_tracker.hpp  market_state_store.hpp
include/monitoring/: health_status.hpp  logger.hpp  metrics.hpp
include/portfolio/: portfolio_service.hpp
include/risk/: risk_engine.hpp
include/storage/: replay_service.hpp  storage_interfaces.hpp
include/strategy/: sample_threshold_strategy.hpp  spread_capture_strategy.hpp  strategy_context.hpp  strategy_coordinator.hpp  strategy_interface.hpp
scripts/: send_sample_transactions.sh
src/app/: application.cpp  backtest_runner.cpp  engine_controller.cpp  mock_event_sources.cpp  recovery_service.cpp  simulation_runtime.cpp  transaction_publisher_application.cpp
src/config/: config_loader.cpp
src/exchange/: exchange_execution_adapter.cpp  exchange_market_data_adapter.cpp  exchange_router.cpp  live_market_data_feed.cpp
src/execution/: live_execution_tracker.cpp  matching_engine.cpp  order_book.cpp  simulated_execution_engine.cpp
src/infrastructure/: kafka_transaction_consumer.cpp  kafka_transaction_producer.cpp  postgres_repositories.cpp  redis_cache.cpp
src/ingestion/: transaction_consumer.cpp  transaction_ingestor.cpp
src/market_data/: feed_health_tracker.cpp  market_state_store.cpp
src/monitoring/: health_status.cpp  logger.cpp  metrics.cpp
src/portfolio/: portfolio_service.cpp
src/risk/: risk_engine.cpp
src/storage/: replay_service.cpp  storage_interfaces.cpp
src/strategy/: sample_threshold_strategy.cpp  spread_capture_strategy.cpp  strategy_coordinator.cpp
src/tools/: backtest_main.cpp  benchmark_main.cpp  replay_main.cpp  transaction_producer_main.cpp
tests/: test_main.cpp
wall/: docker-compose.yml
